# inventory-interview

./: .gitignore  README.md  docker-compose.yml  template.env
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
backend/eshop_inventory/: app.py  logs.py  settings.py
backend/eshop_inventory/api/: router.py  schemas.py
backend/eshop_inventory/clients/: baselinker.py  dependencies.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  nginx.conf.template  nginx.local.conf  nginx.prod.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: AppFooter.vue  AppHeader.vue  AppMenu.vue
frontend/src/router/: index.js
frontend/src/views/: ProductsView.vue
